main.css
body {
  margin: 0;
  background-color: mediumaquamarine;
  font-size: 18px;
}
input, select {
  font-size: 100%;
}

#header-container, #page-container {
  display: flex;
  justify-content: center;
  text-align: center;
}

#header-container {
  margin: 0;
  margin-bottom: 1rem;
  background-color: aquamarine;
}

#header-link {
  text-decoration: none;
  color: black;
}
#header-link:hover {
  color: mediumaquamarine;
}

#netlify-identity {
  position: absolute;
  margin-top: 1.5rem;
  margin-left: 1rem;
}

#page-container section {
  width: 80%;
}

/* *************
Category Headers 
************** */
.category-header {
  background-color: cadetblue;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  padding: 0.5rem;
}
.category-header:hover {
  cursor: pointer;
}
.category-header .category-toggle {
  width: 2rem;
  float: right;
}

/* *************
      Cards
************** */
.card {
  /* Add shadows to create the "card" effect */
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
  transition: 0.3s;
  margin-bottom: 0.5rem;
  background-color: paleturquoise;
}
.card:hover {
  /* On mouse-over, add a deeper shadow */
  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
}
.card a {
  padding-top: 5px;
  padding-bottom: 5px;
  text-decoration: none;
  color: black;
  display: block;
  width: 100%;
  height: 100%;
}

/* *************
   View Page
************** */
#view-title {
  font-size: 200%;
  margin-bottom: 0;
}

#view-categories {
  margin-top: 0.5rem;
}

#view-categories span {
  padding-left: 0.5rem;
}

#view-ingredients, #view-directions {
  margin-top: 0;
  display: inline-block;
  text-align: left;
  width: 50%;
}

/* *************
 Button Footers
************** */
.footer-buttons {
  position: fixed;
  bottom: 0%;
  width: 80%;
  padding-bottom: 2rem;
}
.footer-buttons button {
  padding: 2.5rem;
  border:solid 2px aquamarine;
  background: none;
  border-radius: 100%;
}
.footer-buttons button:hover {
  background:aquamarine;
}
.footer-buttons .button-left {
  float: left;
}
.footer-buttons .button-right {
  float: right;
}

